I'm losing my mind Feat: Fixed pagelink distortions

--- a/src/App.css
+++ b/src/App.css
@@ -78,29 +78,28 @@ ul {
 }
 
 li {
+  margin: 0.4rem;
   list-style-type: none;
   display: inline-block;
-  margin: 0.4rem;
+  padding: 0;
   font-weight: 400;
   transition: all 0.2s;
 }
 
 li:hover {
-  transform: translateY(-5px);
+  transform: translateY(-0.3rem);
 }
 
 .react-link {
   color: var(--mainColor);
   border-radius: 5px;
-  margin-left: 0.2rem;
+  width: 4rem;
   padding: 0.4rem;
   text-align: center;
 }
 
 .react-link:hover {
   box-shadow: 0 5px 5px 0px var(--secondaryColor);
-  border-radius: 5px;
-  border: var(--secondaryColor) solid 1px;
 }
 
 /* @media (prefers-reduced-motion: no-preference) {
